resources/assets/sass/sidebar.scss
body {
  width: 100%;
  height: 100%;
  margin: 0;
}

.slideout-menu {
  position: fixed;
  top: 0;
  bottom: 0;
  width: 180px;
  height: 100vh;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  z-index: 0;
  display: none;
  background-color: $dark;
  color: $light;
}

.slideout-menu-left {
  left: 0;
}

.slideout-menu-right {
  right: 0;
}

.slideout-panel {
  background-color: white;
  color: $dark;
  position: relative;
  z-index: 1;
  will-change: transform;
  min-height: 100vh;
  padding-left: 5px;
  padding-top: 5px;
}

.slideout-open,
.slideout-open body,
.slideout-open .slideout-panel {
  overflow: hidden;
}

.slideout-open .slideout-panel {
  width: calc(100% - 180px);
}

.slideout-open .slideout-menu {
  display: block;
}

.menu-head {
  padding-left: 5px;
  padding-top: 5px;
  display: table;
}

.menu-head span{
  vertical-align: middle;
  display: table-cell;
  padding-left: 10px;
  font-weight: bold;
}

.menu-main {
  margin-top: 20px;
}

.menu-main ul{
  list-style: none;
  padding: 0;
}

.menu-main ul>li{
  display: inline-block;
  width: 100%;
}

.menu-main span{
  text-align: center;
  vertical-align: middle;
  display: table-cell;
  padding-left: 10px;
}

.menu-main ul>li>a {
  color: $light;
  text-decoration: none;
  display: block;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
}

.menu-main ul>li>a:hover, a:focus {
  background-color: $gray-900;
}

.menu-main section {
  display: table;
}

.logo {
  height: 25px;
  width: 25px;
}

.menu-main ul>li>a.active {
  font-weight: bold;
}

.menu-main ul>li>ul>li>a {
  background-color: $gray-700;
  color: $light;
  text-decoration: none;
  display: block;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 15px;
}

